--- a/app/views/pages/about.haml
+++ b/app/views/pages/about.haml
@@ -1,4 +1,5 @@
 - content_for :title do
-    About
+  About
 
-%h1 About
+%h3 Disclaimer
+This website is an experimental setup for internal use of Faria Systems Inc.
